First stable version

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -13,7 +13,7 @@ pidfile=/var/run/supervisord.pid                ; pidfile location
 nodaemon=true                                   ; run supervisord in the foreground
 minfds=1024                                     ; number of startup file descriptors
 minprocs=200                                    ; number of process descriptors
-umask = 022                                     ; All permisions to user, only wx from others
+umask=022                                       ; All permisions to user, only wx from others
 user=root                                       ; default user
 
 [supervisorctl]
@@ -23,7 +23,7 @@ serverurl=unix:///tmp/supervisor.sock           ; use a unix:// URL for a unix s
 [eventlistener:mainprocess_killer]
 command=python /usr/local/bin/kill_superd.py
 events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL,PROCESS_STATE_UNKNOWN
-process_name=mainprocess
+startsecs=0
 
 [include]
 files = /etc/supervisord/conf.d/*.conf
