--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,7 +21,7 @@ serverurl=unix:///tmp/supervisor.sock           ; use a unix:// URL for a unix s
 
 # Event listener to watch the main process and kill supervisord if it dies
 [eventlistener:mainprocess_killer]
-command=python /usr/local/bin/kill_superd.py
+command=python /usr/local/bin/kill_superd.py %(ENV_KILL_SUPERD_ARGS)s
 events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL,PROCESS_STATE_UNKNOWN
 startsecs=0
 
